--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@polymer/polymer": "^2.0.2",
     "@webcomponents/webcomponentsjs": "^1.0.3",
     "d3": "^3.5.17",
-    "shelljs": "^0.7.0"
+    "rdf-fetch": "^1.0.0",
+    "shelljs": "^0.7.0",
+    "simplerdf": "github:simplerdf/simplerdf#develop"
   },
   "devDependencies": {
-    "vulcanize": "^1.16.0"
+    "polymer-bundler": "^3.0.1"
   }
 }
